workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__snap_y_just_under.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(7.0, 7.0 - TOLERANCE * 0.5))"
---
Location {
    key: (
        7,
        7,
    ),
    block_index: 7,
    bit_index: 31,
    point: Point(
        7.0,
        6.9999237,
    ),
    distance: 9.899441,
    radians: 2.356189,
    contained: true,
}
