workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__top.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(0.0, -7.5))"
---
Location {
    key: (
        0,
        -8,
    ),
    block_index: 2,
    bit_index: 0,
    point: Point(
        0.0,
        -7.5,
    ),
    distance: 7.5,
    radians: 0.0,
    contained: true,
}
