workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__top_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (0.0, -8.1))"
---
Location {
    key: (
        0,
        -8,
    ),
    block_index: 2,
    bit_index: 0,
    point: (
        0.0,
        -8.1,
    ),
    distance: 8.1,
    radians: 0.0,
    contained: false,
}
