workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__top_right.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(7.5, -7.5), None)"
---
Location {
    key: (
        7,
        -8,
    ),
    point: Point(
        7.5,
        -7.5,
    ),
    contained: true,
    distance: 10.606602,
    radians: 0.7853982,
}
